force-app/main/default/objects/Swipe_Session__c/Swipe_Session__c.object-meta.xml
<CustomObject>
    <label>Swipe Session</label>
    <nameField>
        <displayFormat>SS-{00000}</displayFormat>
        <label>Session Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Swipe Sessions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>