force-app/main/default/objects/Swipe_Session__c/fields/Movie_Queue__c.field-meta.xml
<CustomField>
    <fullName>Movie_Queue__c</fullName>
    <label>Movie Queue</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>