force-app/main/default/objects/Swipe_Session__c/fields/Owner_User__c.field-meta.xml
<CustomField>
    <fullName>Owner_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Swipe Sessions</relationshipLabel>
    <relationshipName>Swipe_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>